--- a/laba2.html
+++ b/laba2.html
@@ -9,12 +9,12 @@
 <body>
 
 	<header>
-		<img class="head" src="./img/photo1.jpg" alt="none">
+		<img class="head-photo" src="./img/photo1.jpg" alt="none">
 	</header>
 
 	<main>
 		<div class="row1">
-			<img class="head-photo" src="./img/photo2.jpg" alt="none">
+			<img class="main-photo" src="./img/photo2.jpg" alt="none">
 
 			The ArmaLite AR-15 is a select-fire, air-cooled, gas-operated, magazine-fed assault rifle manufactured in the United States between 1959 and 1964, and adopted by the United States Armed Forces as the M16 rifle. Designed by American gun manufacturer ArmaLite in 1956, it was based on its AR-10 rifle. The ArmaLite AR-15 was designed to be a lightweight assault rifle and to fire a new high-velocity, lightweight, small-caliber cartridge to allow infantrymen to carry more ammunition.
 
