--- a/laba4.html
+++ b/laba4.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./css/laba4.css">
   <link href='https://fonts.googleapis.com/css?family=Catamaran' rel='stylesheet'>
@@ -31,7 +32,7 @@
 
 	<main>
 		<h1>What is Elinguage?</h1>
-		<p>Web platform for communikation using different artificial lenguages. New idea for you and your friends fun.<br/> Enjoy you conversation!</p>
+		<p>Web platform for communikation using different artificial lenguages. New idea for you and your friends fun. Enjoy you conversation!</p>
 		<h2>How it works?</h2>
 		<div class="lowercontent">
 			<div class="phototext">
